fix Store Admin Controller step1 method